Update gitignore and refactor application code
- Added generated dependency-reduced POM to .gitignore to prevent it from being tracked.
- Improved readability by replacing hard-coded array access with `getFirst()` method in savings goal selection logic.
- Cleaned up `ServiceException` by removing unused constructors; streamlined exception handling.
- Edited comments to clarify methods' purposes, enhanced the documentation for creating a new savings goal.
- Updated the `ACCESS_TOKEN` in config.properties for refreshed credentials.

These changes enhance code maintainability and ensure sensitive files are not inadvertently committed to the repository.